--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
         android:id="@+id/tv_tittle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:layout_marginHorizontal="16dp"
         android:text="Firebase Auth an Firestore"
         android:textAlignment="center"
@@ -37,6 +38,7 @@
         android:id="@+id/et_layout_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toBottomOf="@+id/image_logo"
         android:layout_marginTop="32dp">
 
@@ -51,6 +53,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_layout_password"
         android:layout_width="match_parent"
+        android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/et_layout_email"
         android:layout_marginTop="32dp">
@@ -72,6 +75,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+    <TextView
+        android:id="@+id/tv_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Aún no eres miembro? Unete!!"
+        android:textAlignment="center"
+        android:textColor="#1D6110"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_login" />
+
 
 
 
